# stock-analysis-system

./: .env.example  .gitignore  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  datasource-contract.md
src/config/: __init__.py  settings.py
src/datasource/: __init__.py  base.py  exceptions.py  factory.py  models.py
src/datasource/crypto/: __init__.py  binance.py  okx.py
src/datasource/stock/: __init__.py  us.py
tests/mocks/: __init__.py  mock_provider.py
tests/test_datasource/: __init__.py  test_mock_provider.py
