[project]
name = "stock-analysis-system"
version = "0.1.0"
description = "Crypto-first multi-market analysis platform"
authors = [{name = "绒", email = ""}]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "TBD"}

dependencies = [
    # Core
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",

    # Exchange APIs
    "ccxt>=4.0.0",

    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",  # PostgreSQL driver
    "alembic>=1.12.0",  # Database migrations

    # Cache & Tasks
    "redis>=5.0.0",
    "celery>=5.3.0",

    # Technical Analysis
    "TA-Lib>=0.4.28",  # Requires system TA-Lib installation
    "pandas-ta>=0.3.14b",  # Fallback for prototyping

    # Backtesting
    "vectorbt>=0.26.0",
    "backtrader>=1.9.78",

    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",

    # Visualization (optional, phase 2)
    # "streamlit>=1.28.0",
    # "plotly>=5.17.0",

    # Logging
    "structlog>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "black>=23.10.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, tighten later

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: marks tests as integration tests (need real APIs, skipped in CI)",
    "slow: marks tests as slow",
]
